Fixing the issues

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
-=== DX-Starter ===
+=== Freedo ===
 
-Modified DevriX Starter starter theme by DevriX
+Freedo theme by DevriX
 
-= 7/3/2016 - Version 1.0.0 =
+= 15/7/2016 - Version 1.0.0 =
  * Initial version for the starter theme
